{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 22,
  "lineage": "e8af8db1-23ed-e87e-5dd6-ee27ab5c8754",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:630841328033:instance/i-0a93f2b59ceff32eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a93f2b59ceff32eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tests",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0709c7874c39c23ae",
            "private_dns": "ip-10-0-1-52.ec2.internal",
            "private_ip": "10.0.1.52",
            "public_ip": "54.235.235.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5c38ec82784b182",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8dc6cb6617763c0",
            "tags": {
              "Name": "web_server_1"
            },
            "tags_all": {
              "Name": "web_server_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e9a7774cb57dc057"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:630841328033:instance/i-0da0723c37cfed6fb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da0723c37cfed6fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tests",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ff4cbc1e8586e5dd",
            "private_dns": "ip-10-0-2-124.ec2.internal",
            "private_ip": "10.0.2.124",
            "public_ip": "34.228.198.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0041df4fbb3070ff0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0747329e2586461ad",
            "tags": {
              "Name": "web_server_2"
            },
            "tags_all": {
              "Name": "web_server_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e9a7774cb57dc057"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstone_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:internet-gateway/igw-06cb731c7caeffeac",
            "id": "igw-06cb731c7caeffeac",
            "owner_id": "630841328033",
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_tble",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:route-table/rtb-0dd8decdbeeb8fa43",
            "id": "rtb-0dd8decdbeeb8fa43",
            "owner_id": "630841328033",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f268286d2721944"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_tble",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:route-table/rtb-0a3b1dd31bbe5f5c5",
            "id": "rtb-0a3b1dd31bbe5f5c5",
            "owner_id": "630841328033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cb731c7caeffeac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f268286d2721944"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_capstone",
            "aws_internet_gateway.capstone_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab9ed6a2eca8b369",
            "route_table_id": "rtb-0dd8decdbeeb8fa43",
            "subnet_id": "subnet-0413ffa1f0ceff5e9"
          },
          "dependencies": [
            "aws_route_table.private_rt_tble",
            "aws_subnet.application-subnet-1",
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fc84976e9f2f7f5",
            "route_table_id": "rtb-0dd8decdbeeb8fa43",
            "subnet_id": "subnet-098adbaf5dd3cd9b2"
          },
          "dependencies": [
            "aws_subnet.application-subnet-2",
            "aws_vpc.vpc_capstone",
            "aws_route_table.private_rt_tble"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220fc4d1b4779a3f",
            "route_table_id": "rtb-0dd8decdbeeb8fa43",
            "subnet_id": "subnet-07693f934cd0f931c"
          },
          "dependencies": [
            "aws_subnet.database-subnet-1",
            "aws_vpc.vpc_capstone",
            "aws_route_table.private_rt_tble"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0934c9388609d9d56",
            "route_table_id": "rtb-0dd8decdbeeb8fa43",
            "subnet_id": "subnet-077829f7ee3d9ce98"
          },
          "dependencies": [
            "aws_route_table.private_rt_tble",
            "aws_subnet.database-subnet-2",
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c882e45f04ecc3f",
            "route_table_id": "rtb-0a3b1dd31bbe5f5c5",
            "subnet_id": "subnet-0e8dc6cb6617763c0"
          },
          "dependencies": [
            "aws_internet_gateway.capstone_gateway",
            "aws_route_table.public_rt_tble",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ab7a1de06029064",
            "route_table_id": "rtb-0a3b1dd31bbe5f5c5",
            "subnet_id": "subnet-0747329e2586461ad"
          },
          "dependencies": [
            "aws_subnet.public-subnet-2",
            "aws_vpc.vpc_capstone",
            "aws_internet_gateway.capstone_gateway",
            "aws_route_table.public_rt_tble"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:security-group/sg-0e9a7774cb57dc057",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9a7774cb57dc057",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220303112706872600000001",
            "name_prefix": "terraform-",
            "owner_id": "630841328033",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f268286d2721944"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:subnet/subnet-0413ffa1f0ceff5e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413ffa1f0ceff5e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630841328033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_subnet_1"
            },
            "tags_all": {
              "Name": "app_subnet_1"
            },
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:subnet/subnet-098adbaf5dd3cd9b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098adbaf5dd3cd9b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630841328033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_subnet_2"
            },
            "tags_all": {
              "Name": "app_subnet_2"
            },
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:subnet/subnet-07693f934cd0f931c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07693f934cd0f931c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630841328033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet_1"
            },
            "tags_all": {
              "Name": "db_subnet_1"
            },
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:subnet/subnet-077829f7ee3d9ce98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077829f7ee3d9ce98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "630841328033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet_2"
            },
            "tags_all": {
              "Name": "db_subnet_2"
            },
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:subnet/subnet-0e8dc6cb6617763c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8dc6cb6617763c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630841328033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:subnet/subnet-0747329e2586461ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0747329e2586461ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630841328033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-00f268286d2721944"
          },
          "dependencies": [
            "aws_vpc.vpc_capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_capstone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:630841328033:vpc/vpc-00f268286d2721944",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0923c6bb963ac67ab",
            "default_route_table_id": "rtb-0c339e740ce957896",
            "default_security_group_id": "sg-0a75df5f8733cf8e5",
            "dhcp_options_id": "dopt-87e7c0fe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00f268286d2721944",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c339e740ce957896",
            "owner_id": "630841328033",
            "tags": {
              "Name": "capstone_VPC"
            },
            "tags_all": {
              "Name": "capstone_VPC"
            }
          }
        }
      ]
    }
  ]
}